<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/ellipse_9"
        android:layout_width="179dp"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="201dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-79dp"
        android:background="@drawable/bulathijautua"
        />
    <View
        android:id="@+id/ellipse_10"
        android:layout_width="135.29dp"
        android:layout_height="145dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="273.71dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-63dp"
        android:background="@drawable/bulathijaumuda"
        />
    <View
        android:id="@+id/durian_2"
        android:layout_width="89dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="136dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        android:background="@drawable/logoinsyirah"
        />
    <TextView
        android:id="@+id/mitrainsyir"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="128dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="174dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:gravity="center_horizontal|top"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/email"
            android:layout_width="48dp"
            android:layout_height="26dp"
            android:layout_marginLeft="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="248dp"
            android:text="@string/form_nama"
            android:textSize="14dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center_horizontal|top"
            />
        <EditText
            android:id="@+id/formnama"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginLeft="-7dp"
            android:layout_marginTop="299dp"
            android:hint="@string/form_nama" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TextView
            android:id="@+id/password"
            android:layout_width="89dp"
            android:layout_height="38dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="230dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="310dp"
            android:text="@string/form_password"
            android:textSize="14dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center_horizontal|top"
            />
        <EditText
            android:id="@+id/formpassword"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginLeft="-275dp"
            android:layout_marginTop="375dp"
            android:hint="@string/form_password" />
</LinearLayout>
    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="173dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="94dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="390dp"
        android:text="@string/login_button"
        android:textSize="16dp"
        android:textStyle="bold">
    <Button
        android:id="@+id/buttondaftar"
        android:layout_width="173dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="94dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="430dp"
        android:text="@string/capt_buttondaftar"
        android:textSize="16dp"
        android:textStyle="bold">
    </Button>
    <View
        android:id="@+id/ellipse9"
        android:layout_width="166dp"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-56dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="499dp"
        android:background="@drawable/ellipse6"
        />
    <View
        android:id="@+id/ellipse10"
        android:layout_width="166dp"
        android:layout_height="166dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="515dp"
        android:background="@drawable/ellipse7"
        />


</RelativeLayout>