<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/image3"
        android:layout_width="330dp"
        android:layout_height="334.04dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:background="@drawable/landingpage3"
        />
    <TextView
        android:id="@+id/title3"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="52dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="354dp"
        android:text="@string/title_land3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:gravity="center_horizontal|top"
        />
    <TextView
        android:id="@+id/capt3"
        android:layout_width="313dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="406dp"
        android:text="@string/capt_land3"
        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center_horizontal|top"
        />
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="149dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="484dp"
        android:background="@drawable/lingkaran2"
        />
    <View
        android:id="@+id/ellipse_2"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="173dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="484dp"
        android:background="@drawable/lingkaran2"
        />
    <View
        android:id="@+id/ellipse_3"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="197dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="484dp"
        android:background="@drawable/lingkaran1hijau"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="94dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="526dp"
        android:text="@string/capt_button2"
        android:textStyle="bold"
        android:textSize="12sp"
        />

</RelativeLayout>