<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/image1"
        android:layout_width="330dp"
        android:layout_height="331.66dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/landingpage1"
        />
    <TextView
        android:id="@+id/title1"
        android:layout_width="290dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="374dp"
        android:text="@string/title_land1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:gravity="center_horizontal|top"
        />
    <TextView
        android:id="@+id/caption1"
        android:layout_width="303dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="406dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/capt_land1"
        android:gravity="center_horizontal|top"
        />
    <View
        android:id="@+id/lingkaran1"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="149dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="484dp"
        android:background="@drawable/lingkaran1hijau"
        />
    <View
        android:id="@+id/ellipse_2"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="173dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="484dp"
        android:background="@drawable/lingkaran2"
        />
    <View
        android:id="@+id/ellipse_3"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="197dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="484dp"
        android:background="@drawable/lingkaran2"
        />
    <Button
        android:id="@+id/button_next"
        android:background="#008000"
        android:layout_width="173dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="94dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="526dp"
        android:text="@string/capt_button1"
        android:textSize="12sp"
        />




</RelativeLayout>