<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="419dp"
        android:layout_height="85dp"
        android:background="@color/hijautua">

        <ImageView
            android:layout_width="58dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/logoinsyirah" />

        <TextView
            android:layout_width="125dp"
            android:layout_height="25dp"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="-90dp"
            android:layout_marginTop="55dp"
            android:gravity="center_horizontal|top"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    </LinearLayout>

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="201dp"
        android:layout_height="9dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/garisabout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="124dp" />

    <TextView
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/about"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="142dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:elevation="10dp"
        android:backgroundTint="#A6FF00"
        android:background="@drawable/about_rounded"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="230dp">

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|top"
            android:text="@string/deskripsi_about"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.586" />




    </LinearLayout>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/kontak_about"
        android:elevation="10dp"
        android:fontFamily="@font/poppins"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="510dp" />


</androidx.constraintlayout.widget.ConstraintLayout>