<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vPagerFragment.screen.LandingPage2">

    <View
        android:id="@+id/image2"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/landingpage2"
        />
    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="115dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="450dp"
        android:text="@string/title_land2"
        android:fontFamily="@font/poppinsbold"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:gravity="center_horizontal|top"
        />
    <TextView
        android:id="@+id/caption2"
        android:layout_width="317dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/poppins"
        android:text="@string/capt_land2"
        android:textStyle="bold"
        android:gravity="center_horizontal|top"
        />
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="170dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="570dp"
        android:background="@drawable/lingkaran2"
        />
    <View
        android:id="@+id/ellipse_2"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="570dp"
        android:background="@drawable/lingkaran1hijau"
        />
    <View
        android:id="@+id/ellipse_3"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="230dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="570dp"
        android:background="@drawable/lingkaran2"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/hijautua"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="110dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="600dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/capt_button1"
        android:textSize="12sp"/>



</FrameLayout>