<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAplikasi">

    <View
        android:id="@+id/ellipse_9"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="192dp"
        android:background="@drawable/bulathijautua"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="-20dp" />

    <View
        android:id="@+id/ellipse_10"
        android:layout_width="135.29dp"
        android:layout_height="145dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="-21dp"
        android:background="@drawable/bulathijaumuda"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="-5dp" />

    <View
        android:id="@+id/ellipse10"
        android:layout_width="178dp"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="613dp"
        android:background="@drawable/ellipse7"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="592dp" />

    <View
        android:id="@+id/ellipse9"
        android:layout_width="126dp"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="620dp"
        android:background="@drawable/ellipse6"
        tools:layout_editor_absoluteX="-30dp"
        tools:layout_editor_absoluteY="563dp" />

    <View
        android:layout_width="346dp"
        android:layout_height="272dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/border_daftar"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="190dp" />


    <View
        android:id="@+id/durian_3"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/logoinsyirah"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="70dp" />

    <TextView
        android:id="@+id/mitrainsyir"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="197dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|top"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="137dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="290dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="left|top"
        android:text="@string/form_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="328dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="54dp"
        android:backgroundTint="@color/hijautua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="328dp" />

    <TextView
        android:id="@+id/nama_password"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="left|top"
        android:text="@string/form_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="443dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="360dp"
        android:backgroundTint="@color/hijautua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="443dp" />

    <Button
        android:id="@+id/button_masuk"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="430dp"
        android:backgroundTint="@color/hijautua"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/login_button"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</RelativeLayout>



